syntax = "proto3";

option csharp_namespace = "productProto";

package product;

service ProductGrpcService {
 rpc GetProductByCode (RequestId) returns (ProductGrpc);
 rpc GetAllProducts (Empty) returns (ProductList);
 rpc GetAllProductsActive (RequestActive) returns (ProductList);
 rpc CreateProduct(ProductGrpc) returns (ResponseMessage);
 rpc GetProductsByFilter (ProductFilterRequest) returns (ProductList);
 rpc DeleteProduct(RequestId) returns (ResponseMessage);
 rpc UpdateProduct(ProductGrpc) returns (ResponseMessage);
 rpc ModifyProductActive(RequestId) returns (ResponseMessage);
}

message RequestActive {
	bool active = 1;
}

message RequestId {
    string code = 1;
}

message ProductGrpc {
    string code = 1;
    string name = 2;
    string size = 3;
    string photo = 4;   
    string color = 5;
    bool active = 6;
}

message Empty {} // Solicitud vacía

message ProductList {
  repeated ProductGrpc products = 1; // Lista de productos
}

message ResponseMessage {
    string message = 1;
}

message ProductFilterRequest {
  string code = 1;
  string name = 2;
  string size = 3;
  string color = 4;
}